# crait-extractor

./: README.md
assets/: architecture3.xml
crates/change_json/: Cargo.toml
crates/change_json/src/: change_json.rs  crate_graph_json.rs
crates/crate_extractor/: Cargo.toml
crates/crate_extractor/src/: load_change.rs  main.rs  reload.rs
